--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <maven.compiler.target>19</maven.compiler.target>
         <maven-failsafe-plugin.version>3.0.0-M9</maven-failsafe-plugin.version>
         <maven-surefire-plugin.version>3.0.0-M9</maven-surefire-plugin.version>
-        <jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
+        <jacoco-maven-plugin.version>0.8.4</jacoco-maven-plugin.version>
         <junit-jupiter-engine.version>5.7.0</junit-jupiter-engine.version>
         <junit-platform-surefire-provider.version>1.3.0</junit-platform-surefire-provider.version>
         <junit-platform-commons.version>1.7.0</junit-platform-commons.version>
@@ -35,6 +35,9 @@
         <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
         <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
         <sonar.language>java</sonar.language>
+
+        <jacoco.destFile>../../target/jacoco.exec</jacoco.destFile>
+        <sonar-version>3.7.0.1746</sonar-version>
         <sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
     </properties>
 
@@ -76,7 +79,7 @@
                 <plugin>
                     <groupId>org.sonarsource.scanner.maven</groupId>
                     <artifactId>sonar-maven-plugin</artifactId>
-                    <version>3.7.0.1746</version>
+                    <version>${sonar-version}</version>
                 </plugin>
 
                 <plugin>
@@ -187,6 +190,8 @@
                         <phase>initialize</phase>
                         <configuration>
                             <propertyName>surefire.jacoco.args</propertyName>
+                            <append>true</append>
+                            <destFile>${jacoco.destFile}</destFile>
                         </configuration>
                         <goals>
                             <goal>prepare-agent</goal>
@@ -201,6 +206,12 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+            </plugin>
+
         </plugins>
     </build>
 
