--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <maven.compiler.target>19</maven.compiler.target>
         <maven-failsafe-plugin.version>3.0.0-M9</maven-failsafe-plugin.version>
         <maven-surefire-plugin.version>3.0.0-M9</maven-surefire-plugin.version>
-        <jacoco-maven-plugin.version>0.8.4</jacoco-maven-plugin.version>
+        <jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
         <junit-jupiter-engine.version>5.7.0</junit-jupiter-engine.version>
         <junit-platform-surefire-provider.version>1.3.0</junit-platform-surefire-provider.version>
         <junit-platform-commons.version>1.7.0</junit-platform-commons.version>
@@ -37,6 +37,7 @@
         <sonar.language>java</sonar.language>
 
         <jacoco.destFile>../../target/jacoco.exec</jacoco.destFile>
+        <jacoco.dataFile>../../target/jacoco.exec</jacoco.dataFile>
         <sonar-version>3.7.0.1746</sonar-version>
         <sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
     </properties>
@@ -203,6 +204,9 @@
                         <goals>
                             <goal>report</goal>
                         </goals>
+                        <configuration>
+                            <dataFile>${jacoco.dataFile}</dataFile>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
