--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -17,10 +17,38 @@
         <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
         <skip.unit.tests>false</skip.unit.tests>
         <skip.integration.tests>false</skip.integration.tests>
+        <fhir-base.version>7.0.2-r7</fhir-base.version>
+        <fhir-structures.version>7.0.2-r5</fhir-structures.version>
+        <fhir-hl7-r4.version>6.3.3-r6</fhir-hl7-r4.version>
+        <fhir-hl7-utilities.version>6.3.3-r5</fhir-hl7-utilities.version>
     </properties>
 
     <dependencyManagement>
+    <dependencies>
+        <dependency>
+            <groupId>dev.ikm.jpms</groupId>
+            <artifactId>hapi-fhir-base</artifactId>
+            <version>${fhir-base.version}</version>
+        </dependency>
 
+        <dependency>
+            <groupId>dev.ikm.jpms</groupId>
+            <artifactId>hapi-fhir-structures-r4</artifactId>
+            <version>${fhir-structures.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>dev.ikm.jpms</groupId>
+            <artifactId>org.hl7.fhir.r4</artifactId>
+            <version>${fhir-hl7-r4.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>dev.ikm.jpms</groupId>
+            <artifactId>org.hl7.fhir.utilities</artifactId>
+            <version>${fhir-hl7-utilities.version}</version>
+        </dependency>
+    </dependencies>
     </dependencyManagement>
     
     <dependencies>
@@ -82,19 +110,16 @@
             <groupId>dev.ikm.tinkar.fhir</groupId>
             <artifactId>fhir-extension</artifactId>
             <version>1.58.0-SNAPSHOT</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>dev.ikm.tinkar.ext.owl</groupId>
             <artifactId>owl-extension</artifactId>
             <version>1.58.0-SNAPSHOT</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>dev.ikm.tinkar.ext.binding</groupId>
             <artifactId>binding-extension</artifactId>
             <version>1.58.0-SNAPSHOT</version>
-            <scope>test</scope>
         </dependency>
 
     </dependencies>
