--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -158,15 +158,12 @@
                                     <outputDirectory>${project.build.directory}/data</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
-                                    <groupId>dev.ikm.build</groupId>
+                                    <groupId>dev.ikm.tinkar.data</groupId>
                                     <artifactId>tinkar-starter-data-reasoned</artifactId>
-                                    <version>0.1</version>
+                                    <version>${tinkar-starter-data.version}</version>
                                     <classifier>pb</classifier>
                                     <type>zip</type>
-                                    <overWrite>false</overWrite>
-                                    <outputDirectory>${project.build.directory}/data</outputDirectory>
-                                </artifactItem>
-                            </artifactItems>
+                                </artifactItem>                            </artifactItems>
                             <outputDirectory>${project.build.directory}/data</outputDirectory>
                             <overWriteReleases>false</overWriteReleases>
                             <overWriteSnapshots>true</overWriteSnapshots>
