--- a/language-extensions/owl-extension/pom.xml
+++ b/language-extensions/owl-extension/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>dev.ikm.tinkar</groupId>
         <artifactId>language-extensions</artifactId>
-        <version>1.58.0</version>
+        <version>1.59.0-SNAPSHOT</version>
     </parent>
 
     <groupId>dev.ikm.tinkar.ext.owl</groupId>
