--- a/provider/data-mvstore-provider/pom.xml
+++ b/provider/data-mvstore-provider/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>dev.ikm.tinkar</groupId>
         <artifactId>provider</artifactId>
-        <version>1.59.0-SNAPSHOT</version>
+        <version>1.59.0</version>
     </parent>
 
     <artifactId>data-mvstore-provider</artifactId>
