--- a/reasoner/pom.xml
+++ b/reasoner/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>dev.ikm.tinkar</groupId>
 		<artifactId>tinkar-core</artifactId>
-		<version>1.59.0-SNAPSHOT</version>
+		<version>1.59.0</version>
 	</parent>
 
 	<artifactId>reasoner</artifactId>
