--- a/provider/data-websocket-client-provider/pom.xml
+++ b/provider/data-websocket-client-provider/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>dev.ikm.tinkar</groupId>
         <artifactId>provider</artifactId>
-        <version>1.60.0</version>
+        <version>1.61.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>data-websocket-client-provider</artifactId>
