--- a/terms/pom.xml
+++ b/terms/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>dev.ikm.tinkar</groupId>
         <artifactId>tinkar-core</artifactId>
-        <version>1.62.0</version>
+        <version>1.63.0-SNAPSHOT</version>
     </parent>
     <artifactId>terms</artifactId>
     <packaging>jar</packaging>
