--- a/provider/pom.xml
+++ b/provider/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>dev.ikm.tinkar</groupId>
         <artifactId>tinkar-core</artifactId>
-        <version>1.63.0</version>
+        <version>1.64.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>provider</artifactId>
