--- a/aggregator/pom.xml
+++ b/aggregator/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>dev.ikm.tinkar</groupId>
         <artifactId>tinkar-core</artifactId>
-        <version>1.64.0</version>
+        <version>1.65.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>aggregator</artifactId>
