--- a/entity/pom.xml
+++ b/entity/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>dev.ikm.tinkar</groupId>
         <artifactId>tinkar-core</artifactId>
-        <version>1.65.0</version>
+        <version>1.66.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>entity</artifactId>
