--- a/pom.xml
+++ b/pom.xml
@@ -423,7 +423,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-assembly-plugin</artifactId>
-                    <version>${maven-assembly-plugin.version}</version>
+                    <version>${maven.assembly.version}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
