--- a/language-extensions/pom.xml
+++ b/language-extensions/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>dev.ikm.tinkar</groupId>
         <artifactId>tinkar-core</artifactId>
-        <version>1.67.0</version>
+        <version>1.68.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>language-extensions</artifactId>
